# Shangin-CS-Labs-2025

./: .gitignore  CMakeLists.txt  DataBaseController.cpp  DataBaseController.hpp  MPrinter.cpp  MPrinter.hpp  Planet.txt  README.md  main.cpp
mymath/: CMakeLists.txt  mymath.cpp
myteacher/: CMakeLists.txt  myteacher.cpp  myteacher.hpp
planet/: CMakeLists.txt  PlanetClass.cpp  PlanetClass.hpp
programs/: CMakeLists.txt  ProgramClass.cpp  ProgramClass.hpp
